--- a/index.html
+++ b/index.html
@@ -1653,7 +1653,7 @@ function emojiHtml(str) {
         <div>${formatCoords(p.lat, p.lng)}</div>
         <div><a href="https://maps.google.com/?q=${p.lat},${p.lng}" target="_blank">📍 Google Maps</a></div>
         <button class="popup-edit-btn" id="editBtn-${p.id}">✏️</button>
-        <button class="popup-route-btn" id="routeBtn-${p.id}">✏️ Dodaj trasę</button>
+        <button class="popup-route-btn" id="routeBtn-${p.id}">Dodaj trasę</button>
       `;
     }
 
