--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@ body, #sidebar, #basemap-switcher {
   margin-bottom: 4px;
 }
 .popup-info-item {
-  margin-bottom: 5px;
+  margin-bottom: 2px;
+  margin-top: 5px;
 }
 .photo-item {
   position: relative;
@@ -2673,7 +2674,7 @@ function zaladujPinezkiZFirestore() {
         <div class="photo-gallery" data-slug="${p.slug}"></div>
         <button class="popup-add-photo" data-slug="${p.slug}">📷</button>
         <input id="enazwa" value="${p.nazwa}" style="width: 100%"><br>
-        <textarea id="eopis" style="width: 100%; height: 100px"></textarea><br>
+        <textarea id="eopis" style="width: 100%; height: 50px"></textarea><br>
         <input id="eodKogo" value="${p.odKogo || ''}" placeholder="Od kogo" style="width: 100%"><br>
         <input id="ewarstwa" value="${p.warstwa || ''}" placeholder="Warstwa" style="width: 100%"><br>
         <input id="ekategoria" value="${p.kategoria || ''}" placeholder="Kategoria" style="width: 100%"><br>
